Fixed error in the layout. Now, if the window is large enough, the left side is used for creating an account whereas the right side is used for creating roles. If the window is too small, both options are shown underneath each other.

--- a/src/main/resources/static/css/adminCreateUserAccount.css
+++ b/src/main/resources/static/css/adminCreateUserAccount.css
@@ -31,7 +31,7 @@ h2 {
 #createAccountButton {
     width: 30%;
     min-width: 120px;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 #inputFieldsForm {
@@ -45,26 +45,35 @@ h2 {
 #inputFieldsForRoleForm {
     position: relative;
     left: 10%;
-    width: 80%;
+    width: 100%;
     margin-bottom: 10px;
     margin-top: 10px;
 }
 
 #createRoleButton {
-    margin-top: 20px;
+    margin-top: 35px;
     width: 30%;
-    min-width: 120px;
+    min-width: 100px;
 }
 
 @media (min-width: 768px) {
-    #createRole {
-        border-left: 1px solid lightgray;
+    #createAccount {
+        border-right: 1px solid lightgray;
     }
 }
 @media (max-width: 768px) {
-    #createRole {
-        border-top: 1px solid lightgray;
+    #createAccount {
+        border-bottom: 1px solid lightgray;
     }
+}
+
+#isAdminLabel {
+    margin-left: 200px;
+    padding-left: 50px;
+}
+
+#isAdmin {
+    margin-top: 10px;
 }
 
 .form-check {
